[package]
name = "rantz_random"
version = "1.0.0"
authors = ["Robert Gardner'"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/BobG1983/rantz_random"
homepage = "https://github.com/BobG1983/rantz_random"
keywords = ["gamedev", "bevy"]
categories = ["game-engines"]
description = "Mostly just a wrapper around fastrand for a bunch of types. Supports bevy and rantz_spatial2d."

[dependencies]
fastrand = { version = "2.1.0" }
